# 2015-SIGGRAPH-convolutional-ot

./: README.md
code/: setupPaths.m
code/blur_functions/: applySymmetricKernel.m  blurAnisotropic.m  blurOnGraph.m  blurOnMesh.m  prefactorMeshBlur.m  prefactoredBlur.m
code/colors_functions/: colorspace.mexmaci64  compute_histogram_2d.m  deltaE2000.m  fit_metric.m  fit_metric_field.m  perform_color_transfer.m  render_lab_histogram.m
code/convolutional_wasserstein/: AlnBzero.m  convolutionalDistance.m  convolutionalProjection.m  convolutionalPropagation.m  convolutionalSoftCorrespondence.m  convolutionalSoftmap.m
code/cpp/: CMakeLists.txt  README  main.cpp
code/cpp/gui/: Camera.cpp  Camera.h  Image.cpp  Image.h  Shader.cpp  Shader.h  Viewer.cpp  Viewer.h  fragment.glsl
code/cpp/ot/: ConvSolver.cpp  ConvSolver.h  LinearSolver.cpp  LinearSolver.h  Options.h  Timer.h  TriMesh.cpp  TriMesh.h  Triangle.h  console.h  types.h  utils.h
code/figures/: batch_colors.m  generateBilinearBarycenterFigure.m  generateColorFigure.m  generateConvergenceTestFigure.m  generateDisplacementInterpolationExample.m  generateEntropyFigure.m  generateEntropyFigure2.m  generateMahjongFigure.m  generateRegularizationFigure.m  generateSkeletonFigure.m  generateSoftMapFigure.m  generateSoftMapFigure2.m  generateSoftMapFigure3.m  generateSoftMapMeshes.m  generateTriangleBarycenterFigure.m  generateValidationFigure.m  generateVolumetricFigure.m  generateVolumetricFigure2.m  generateVolumetricFigure3.m  generateVolumetricFigure4.m  generateVolumetricFigure5.m  subdivideGraphEdges.m
code/mesh_functions/: addCylinders.m  addCylindersHelper.cpp  addCylindersHelper.mexa64  addCylindersHelper.mexw64  addSpheres.m  blVector3D.hpp  cotLaplacian.m  firstOrderFEM.m  getMeshData.m  isolines.m  meanValueCoordinates.m  readOff.m  selectPoint.m  showDescriptor.m  simpleSphere.off  useFEMAreas.m  writeIsolineObj.m  (+1 more)
paper/: MyMnSymbol.sty  convolutional_w2.aux  convolutional_w2.bbl  convolutional_w2.bib  convolutional_w2.blg  convolutional_w2.tex  mystyle.sty
(+52 files in other folders)
